<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ru.biosoft.genomebrowser</groupId>
  <artifactId>server</artifactId>
  <packaging>jar</packaging>
  <version>2.0.0-SNAPSHOT</version>
  <name>Server for genomebrowser</name>
  <url>http://maven.apache.org</url>
  
  <parent>
    <groupId>ru.biosoft</groupId>
    <artifactId>genomebrowser</artifactId>
    <version>2.0.0-SNAPSHOT</version>
  </parent>

  <properties>
    <encoding>UTF-8</encoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
 
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>ru.biosoft</groupId>
      <artifactId>util</artifactId>
      <version>2.0.0</version>
    </dependency>
  
    <dependency>
      <groupId>ru.biosoft.access</groupId>
      <artifactId>core</artifactId>
      <version>2.0.0</version>
    </dependency>
    
    <dependency>
      <groupId>ru.biosoft.access</groupId>
      <artifactId>file</artifactId>
      <version>2.0.0</version>
    </dependency>
    
    <dependency>
        <groupId>ru.biosoft.graphics</groupId>
        <artifactId>editor</artifactId>
        <version>2.0.0</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20250107</version>
    </dependency>
    
    <dependency>
      <groupId>ru.biosoft.genomebrowser</groupId>
      <artifactId>misc</artifactId>
      <version>2.0.0-SNAPSHOT</version>
    </dependency>
    
    <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>6.1.0</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-fileupload2-jakarta-servlet6 -->
    <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-fileupload2-jakarta-servlet6</artifactId>
        <version>2.0.0-M2</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
    <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.18.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
    <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>9.2.0</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
    <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>1.18.3</version>
    </dependency>


    
  </dependencies>

  <build>
    <finalName>server</finalName>

    <plugins>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
     </plugin>
     <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
     </plugin>
   
     <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>6.0.0</version>
     </plugin>
   
    </plugins>
  </build>

</project>
